@@ -54,8 +54,9 @@ class navigator:
     LOCALNEWS = os.path.join(THISADDONPATH, 'whatsnew.txt')
 
     def root(self):
+        
         self.addDirectoryItem('[COLOR=lime]Infos und Updates[/COLOR]', 'newsNavigator', 'news_paper.png', 'DefaultAddonProgram.png') #news_paper.png sieht vor allem mit Exuary-Skin von Lastship nicht gut aus.
-        self.addDirectoryItem("Suche", 'searchNavigator', 'search.png', 'DefaultFolder.png', isFolder=False)
+        self.addDirectoryItem("Suche", 'searchNavigator', 'search.png', 'DefaultFolder.png', isFolder=not self.quickSearchActivated())
         self.addDirectoryItem("Filme", 'movieNavigator', 'movies.png', 'DefaultMovies.png')
         self.addDirectoryItem("TV-Serien", 'tvNavigator', 'tvshows.png', 'DefaultTVShows.png')
 
@@ -394,3 +395,6 @@ class navigator:
     def endDirectory(self):
         control.content(syshandle, 'addons')
         control.directory(syshandle, cacheToDisc=True)
+
+    def quickSearchActivated(self):
+        return control.setting('search.quick') == '1'
